--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@coral-xyz/anchor": "^0.29.0",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.50",
     "@solana/spl-token": "^0.4.1",
+    "@solana/web3.js": "^1.88.0",
     "bs58": "^5.0.0",
     "dotenv": "^16.4.5",
-    "typescript": "^5.3.3"
+    "fastestsmallesttextencoderdecoder": "^1.0.22"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
-    "ts-node": "^10.9.2"
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
